# ftth-compete

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  pyproject.toml  rxconfig.py
.claude/: CLAUDE.md  architecture.md  data-sources.md  dev-notes.md  refresh-bdc-workflow.md  roadmap.md  ux-spec.md
.github/workflows/: deploy.yml  tests.yml
docs/: README.md  admin-page-backlog.md  architecture.md  data-sources.md  design_v2.md  dev-notes.md  methodology.md  penetration_research.md  providers.md  roadmap.md
ftth_compete_web/: __init__.py  analytics.py  cloud_seed.py  ftth_compete_web.py
scripts/: probe_bdc_listing.py  probe_brooklyn.py  probe_compare.py  probe_fiber_availability.py  probe_ias.py  probe_ias_anchor.py  probe_ias_zip.py  probe_subs.py  probe_tabs.py  probe_v2_map.py  refresh_bdc_states.py  smoke_phase1.py  smoke_phase4.py
src/ftth_compete/: __init__.py  cli.py  config.py  export.py  format.py  narrative.py  pipeline.py
src/ftth_compete/analysis/: __init__.py  competitors.py  housing.py  lenses.py  market.py  penetration.py  provider_view.py  screener.py  speeds.py  trajectory.py  velocity.py
src/ftth_compete/data/: __init__.py  acp.py  cache.py  census_acs.py  fcc_bdc.py  fcc_ias.py  google_places.py  mlab.py  ookla.py  providers.py  tiger.py
src/ftth_compete/pipelines/: __init__.py  refresh_acs.py  refresh_all.py  refresh_bdc.py  refresh_ias.py
src/ftth_compete/ui/: app.py  narrative.py
tests/: conftest.py  test_analysis_competitors.py  test_analysis_housing.py  test_analysis_lenses.py  test_analysis_market.py  test_analysis_penetration.py  test_analysis_provider_view.py  test_analysis_screener.py  test_analysis_velocity.py  test_cache.py  test_cli.py  test_config.py  test_data_fcc_ias.py  test_format.py  test_imports.py  test_logging_redaction.py  test_narrative.py  test_providers.py
(+10 files in other folders)
